# Inventory-Applet

./: .replit  App.py  Item.py  README.md  inventory.db  pyproject.toml
