[tool.poetry]
name = "repl_python3_Inventory-Applet-1"
version = "0.1.0"
description = ""
authors = ["BesartMujeci <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
streamlit = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
